增加用户绑定功能
